Refactor Code Smell (#104)
* Refactor Code Smell

* Refactor Code Smell