@@ -11,7 +11,6 @@ import kr.hakdang.cassdio.core.domain.cluster.keyspace.udt.ClusterUDTTypeArgs.Cl
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import static com.datastax.oss.driver.api.querybuilder.QueryBuilder.bindMarker;
@@ -44,7 +43,7 @@ public class ClusterUDTTypeListCommander extends BaseClusterCommander {
         List<ClusterUDTType> types = StreamSupport.stream(rs.spliterator(), false)
             .limit(rs.getAvailableWithoutFetching())
             .map(ClusterUDTType::from)
-            .collect(Collectors.toList());
+            .toList();
 
         return ClusterUDTTypeListResult.of(types, rs.getExecutionInfo().getPagingState());
     }
